[gd_scene load_steps=2 format=3 uid="uid://dyxhiqlvtanid"]

[ext_resource type="Script" path="res://ui/enter_leaderboard/enter_leaderboard.gd" id="1_83nd6"]

[node name="enter_leaderboard" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_83nd6")

[node name="vbox_container" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="label" type="Label" parent="vbox_container"]
layout_mode = 2
text = "Enter your name:"

[node name="name_entry" type="LineEdit" parent="vbox_container"]
layout_mode = 2

[node name="submit_button" type="Button" parent="vbox_container"]
layout_mode = 2
text = "Submit"

[connection signal="pressed" from="vbox_container/submit_button" to="." method="_on_submit_button_pressed"]
